--- a/Training/Topics/Jasmine/index.html
+++ b/Training/Topics/Jasmine/index.html
@@ -120,7 +120,7 @@ describe('Unit Tests for blah-blah addition function', function () {
         <article>
             <h3 class="topic"><a name="references">References</a></h3>
             <ul>
-                <li><a href="http://pivotal.github.com/jasmine/">Jasmine doc</a></li>
+                <li><a href="http://jasmine.github.io/">Jasmine doc</a></li>
                 <li><a href="http://evanhahn.com/how-do-i-jasmine/">How do I ?</a></li>
                 <li><a href="http://try-jasmine.heroku.com/">Try Jasmine</a></li>
             </ul>
