--- a/Training/index.html
+++ b/Training/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Synerzip's HTML5 Summit</title>
+    <title>Synerzip's ExtJS & AngularJS Summit</title>
     <link rel="stylesheet" href="resources/css/main.css"/>
 </head>
 <body>
@@ -17,6 +17,7 @@
             <li><a href="/Topics/basicHTML_JS_CSS/index.html">Basic Training on HTML, JavaScript, CSS</a></li>
             <li><a href="/Topics/Jasmine/index.html">Jasmine Primer</a></li>
             <li><a href="/Topics/HTML5CSS3/index.html">HTML5 & CSS Primer</a></li>
+            <li><a href="/Topics/aboutTrainers.html">About Trainers</a></li>
         </ol>
     </section>
 </section>
