--- a/Training/index.html
+++ b/Training/index.html
@@ -11,7 +11,9 @@
     </header>
     <hr/>
     <section class="content">
+
         <h1><span>ExtJS & AngularJS Summit</span></h1>
+
         <b>Training Material</b>
         <ol>
             <li><a href="/Topics/basicHTML_JS_CSS/index.html">Basic Training on HTML, JavaScript, CSS</a></li>
@@ -20,6 +22,10 @@
             <li><a href="/Topics/aboutTrainers.html">About Trainers</a></li>
         </ol>
     </section>
+    <h1>
+        <img class="productLogo" src="resources/images/extlogo.png"/>
+        <img class="productLogo" src="resources/images/angularLogo.png"/>
+    </h1>
 </section>
 
 </body>
