--- a/Training/index.html
+++ b/Training/index.html
@@ -17,6 +17,8 @@
         <b>Training Material</b>
         <ol>
             <li><a href="/Topics/basicHTML_JS_CSS/index.html">Basic Training on HTML, JavaScript, CSS</a></li>
+            <li><a href="/Topics/EXTJS-Primer/index.html">Introduction
+            to ExtJS</a></li>
             <li><a href="/Topics/Jasmine/index.html">Jasmine Primer</a></li>
             <li><a href="/Topics/HTML5CSS3/index.html">HTML5 & CSS Primer</a></li>
             <li><a href="/Topics/aboutTrainers.html">About Trainers</a></li>
