ext first example

--- a/Training/Topics/Jasmine/index.html
+++ b/Training/Topics/Jasmine/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Synerzip's HTML5 Summit</title>
+    <title>Synerzip's ExtJS Summit</title>
     <link rel="stylesheet" href="/resources/css/main.css"/>
 </head>
 <body>
@@ -39,7 +39,8 @@
         </article>
         <article>
             <h3 class="topic"><a name="installation">Installation</a></h3>
-             <p>You can simple download latest version from <a href="https://github.com/pivotal/jasmine/downloads">here</a>
+             <p>You can simply download latest version from <a
+                     href="https://github.com/pivotal/jasmine/downloads">here</a>
              and arrange your folder structure shown in following figure.</p>
              <img src='resources/jasmineFolderStructure.png'></img>
              </p>
