--- a/Training/index.html
+++ b/Training/index.html
@@ -19,6 +19,11 @@
             <li><a href="/Topics/basicHTML_JS_CSS/index.html">Basic Training on HTML, JavaScript, CSS</a></li>
             <li><a href="/Topics/EXTJS-Primer/index.html">Introduction
             to ExtJS</a></li>
+            <li><a href="topics/#"> Essentials</a></li>
+            <li><a href="/Topics/#">Widgets Form, Layouts etc</a></li>
+            <li><a href="/Topics/#">Ext MVC</a></li>
+            <li><a href="/Topics/#">Grid and Trees</a></li>
+            <li><a href="/Topics/#">Unit Testing of ExtJS</a></li>
             <li><a href="/Topics/Jasmine/index.html">Jasmine Primer</a></li>
             <li><a href="/Topics/HTML5CSS3/index.html">HTML5 & CSS Primer</a></li>
             <li><a href="/Topics/aboutTrainers.html">About Trainers</a></li>
