--- a/Training/Topics/EXTJS-Primer/Examples/example1.html
+++ b/Training/Topics/EXTJS-Primer/Examples/example1.html
@@ -9,9 +9,10 @@
             src="messageBox.js"></script>
 </head>
 <body>
-<div>
-<span id="result"></span>
-</div>
+<!--<div style="padding-top: 50px; padding-left: 50px; border: 1px solid red;-->
+<!--width: 300px; height: 300px">-->
+<!--<span id="result" style="font-size: 40px"></span>-->
+<!--</div>-->
 </body>
 
 </html>
