--- a/Training/index.html
+++ b/Training/index.html
@@ -20,7 +20,8 @@
             <li><a href="/Topics/EXTJS-Primer/index.html">Introduction
             to ExtJS</a></li>
             <li><a href="topics/#"> Essentials</a></li>
-            <li><a href="/Topics/#">Widgets Form, Layouts etc</a></li>
+            <li><a href="/Topics/ExtWidgets/index.html">Widgets Form, Layouts
+                etc</a></li>
             <li><a href="/Topics/#">Ext MVC</a></li>
             <li><a href="/Topics/#">Grid and Trees</a></li>
             <li><a href="/Topics/#">Unit Testing of ExtJS</a></li>
