--- a/Training/index.html
+++ b/Training/index.html
@@ -22,7 +22,8 @@
             <li><a href="topics/#"> Essentials</a></li>
             <li><a href="/Topics/ExtWidgets/index.html">Widgets Form, Layouts
                 etc</a></li>
-            <li><a href="/Topics/EXTJS-MVC/">Ext MVC</a></li>
+            <li><a href="/Topics/EXTJS-MVC/index.html">Ext MVC</a></li>
+            <li><a href="/Topics/EXTJS-AppArchitecture/index.html">EXT App Architecture</a></li>
             <li><a href="/Topics/#">Grid and Trees</a></li>
             <li><a href="/Topics/#">Unit Testing of ExtJS</a></li>
             <li><a href="/Topics/Jasmine/index.html">Jasmine Primer</a></li>
