--- a/Training/Topics/aboutTrainers.html
+++ b/Training/Topics/aboutTrainers.html
@@ -13,19 +13,11 @@
     <section class="content">
         <article>About Trainer</h3>
             <ol>
-                <li>Alok</li>
-                <li>Pankaj</li>
-                <li>Nilesh</li>
-                <li>Hussain</li>
+                <li>Alok Guha</li>
+                <li>Pankaj Avhad</li>
             </ol>
-
         </article>
-
-
-
     </section>
 </section>
-
-
 </body>
 </html>
