--- a/Training/index.html
+++ b/Training/index.html
@@ -19,21 +19,21 @@
             <li><a href="/Topics/basicHTML_JS_CSS/index.html">Basic Training on HTML, JavaScript, CSS</a></li>
             <li><a href="/Topics/EXTJS-Primer/index.html">Introduction
             to ExtJS</a></li>
-            <li><a href="topics/#"> Essentials</a></li>
+            <!--<li><a href="topics/#"> Essentials</a></li>-->
             <li><a href="/Topics/ExtWidgets/index.html">Widgets Form, Layouts
                 etc</a></li>
             <li><a href="/Topics/EXTJS-MVC/index.html">Ext MVC</a></li>
             <li><a href="/Topics/EXTJS-AppArchitecture/index.html">EXT App Architecture</a></li>
-            <li><a href="/Topics/#">Grid and Trees</a></li>
+            <li><a href="/Topics/grid/index.html">Grid and Trees</a></li>
             <li><a href="/Topics/#">Unit Testing of ExtJS</a></li>
             <li><a href="/Topics/Jasmine/index.html">Jasmine Primer</a></li>
             <li><a href="/Topics/HTML5CSS3/index.html">HTML5 & CSS Primer</a></li>
-            <li><a href="/Topics/aboutTrainers.html">About Trainers</a></li>
+            <!--<li><a href="/Topics/aboutTrainers.html">About Trainers</a></li>-->
         </ol>
     </section>
     <h1>
         <img class="productLogo" src="resources/images/extlogo.png"/>
-        <img class="productLogo" src="resources/images/angularLogo.png"/>
+        <!--<img class="productLogo" src="resources/images/angularLogo.png"/>-->
     </h1>
 </section>
 
