--- a/Training/Topics/Tree/example1/simpleTree.html
+++ b/Training/Topics/Tree/example1/simpleTree.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title> Message Boxes </title>
+    <title> Simple Tree </title>
     <link rel="stylesheet" type="text/css"
           href="../../../extzip/ext-4.2.1.883/resources/css/ext-all.css" />
     <script type="text/javascript"
             src="../../../extzip/ext-4.2.1.883/ext-all.js"></script>
     <script type="text/javascript"
-            src="simplegrid.js"></script>
+            src="simpleTree.js"></script>
 </head>
 <body>
 </body>
