Layouts and Examples

--- a/Training/Topics/EXTJS-AppArchitecture/index.html
+++ b/Training/Topics/EXTJS-AppArchitecture/index.html
@@ -23,9 +23,28 @@
                 <li><a href="/Topics/EXTJS-AppArchitecture/App_Architecture_Part1/index.html">App Architecture Part1</a></li>
                 <li><a href="/Topics/EXTJS-AppArchitecture/App_Architecture_Part2/index.html">App Architecture Part2</a></li>
                 <li><a href="/Topics/EXTJS-AppArchitecture/App_Architecture_Part3/index.html">App Architecture Part3</a></li>
+                <li><a href="#run-example">Example</a></li>
+                <li><a href="#references">References</a></li>
             </ul>
             <hr/>
         </article>
+
+        <article>
+                    <h3 class="topic"><a name="run-example">Run Live Example</a></h3>
+            <ul>
+                    <li><a href="appArchitecture/index.html">Example 1</a></li>
+            </ul>
+                    <a href="#TOC">Table of Contents</a>
+                    <hr/>
+                </article>
+                <article>
+                    <h3 class="topic"><a name="references">References</a></h3>
+                    <ul>
+                        <li><a href="http://localhost:4000/extzip/ext-4.2.1.883/docs/index.html#!/guide/mvc_pt1">Ext App Architecture docs</a></li>
+                    </ul>
+                    <a href="#TOC">Table of Contents</a>
+                    <hr/>
+                </article>
     </section>
 </section>
 
