--- a/Training/Topics/EXTJS-MVC/index.html
+++ b/Training/Topics/EXTJS-MVC/index.html
@@ -27,8 +27,10 @@
                 <li><a href="#Controlling_the_grid">Controlling the grid</a></li>
                 <li><a href="#Creating_a_Model_and_a_Store">Creating a Model and a Store</a></li>
                 <li><a href="#Saving_data_with_the_Model">Saving data with the Model</a></li>
+                <li><a href="#run-example">Example</a></li>
                 <li><a href="#Deployment">Deployment</a></li>
                 <li><a href="#Next_Steps">Next Steps</a></li>
+                <li><a href="#references">References</a></li>
             </ul>
             <hr/>
         </article>
@@ -1451,7 +1453,21 @@
                                           <hr/>
                 </article>
 
-
+        <article>
+                    <h3 class="topic"><a name="run-example">Run Live Example</a></h3>
+                    <li><a href="simple/simple.html">Example 1</a></li>
+                    <br/><br/>
+                    <a href="#TOC">Table of Contents</a>
+                    <hr/>
+                </article>
+                <article>
+                    <h3 class="topic"><a name="references">References</a></h3>
+                    <ul>
+                        <li><a href="http://localhost:4000/extzip/ext-4.2.1.883/docs/index.html#!/guide/application_architecture">Ext MVC docs</a></li>
+                    </ul>
+                    <a href="#TOC">Table of Contents</a>
+                    <hr/>
+                </article>
 
     </section>
 </section>
