--- a/Training/Topics/grid/index.html
+++ b/Training/Topics/grid/index.html
@@ -195,9 +195,9 @@
 
         <article>
             <h3 class="topic"><a name="run-example">Run Live Example</a></h3>
-            <li><a href="example1/simplegrid.html">Example 1</a></li>
+            <li><a href="example1/simpleLayout.html">Example 1</a></li>
             <li><a
-                    href="example2/grid.html">Example 2</a></li>
+                    href="example2/layout.html">Example 2</a></li>
             <br/><br/>
             <a href="#TOC">Table of Contents</a>
             <hr/>
