--- a/Training/index.html
+++ b/Training/index.html
@@ -25,6 +25,7 @@
             <li><a href="/Topics/EXTJS-MVC/index.html">Ext MVC</a></li>
             <li><a href="/Topics/EXTJS-AppArchitecture/index.html">EXT App Architecture</a></li>
             <li><a href="/Topics/grid/index.html">Grid and Trees</a></li>
+            <li><a href="/Topics/layouts/index.html">Layouts</a></li>
             <li><a href="/Topics/#">Unit Testing of ExtJS</a></li>
             <li><a href="/Topics/Jasmine/index.html">Jasmine Primer</a></li>
             <li><a href="/Topics/HTML5CSS3/index.html">HTML5 & CSS Primer</a></li>
